--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://gargansa.github.io/",
+  "homepage":"<https://gargansa.github.io/>",
   "name": "resume",
   "version": "0.1.0",
   "private": true,
